# FED

./: ryuki_function.plt~  桁数精度比較~
EKF/: CMakeLists.txt  build.cmake  ekfkalman.cpp  main  main.cpp
KF/: kalman  kalman.cpp
OPSO/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  N_sigma_check.gp  N_sigma_check.gp~  Ncheck.gp~  PSO.h~  PSO_gif.gp~  check.dat~  cmake_install.cmake  dfecheck.gp  dfecheck.gp~  errorcheck.dat~  gif.gp  gif.gp~  gif_dfe.gp  gif_dfe.gp~  main.cpp  oPSO.h~  opso  opso.cpp  opso.h  opso.h~  sigmacheck.gp~  signalerror.dat~  signalerror.gp~  stopgif.gp  stopgif.gp~  value_error_check.gp  value_error_check.gp~  valuecheck.gp~
PSO/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Ncheck.gp  PSO  PSO.cpp  PSO.h  README~  check.dat~  check1.dat~  cmake_install.cmake  dfe.h  errorcheck.dat~  errorcheck.gp  errorcheck.gp~  gif.gp  gif.gp~  main.cpp  sigmacheck.gp  stopgif.gp  testfunction_opt.csv  testfunction_opt.gp~  valuecheck.gp
accdata/: 10.csv  1000.csv  100_mini.csv  10pi_40pi_100hz.csv  10pi_80pi_100hz.csv  20pi_1000hz.csv  20pi_160pi_100hz.csv  20pi_80pi_100hz.csv  20pi_grad.csv  250.csv  2pi_10.csv  2pi_100.csv  2pi_1000n.csv  2pi_10pi_1000hz.csv  2pi_160.csv  2pi_2.csv  2pi_20.csv  2pi_200.csv  2pi_20pi_1000hz.csv  2pi_20pi_1000hz_300.csv  2pi_20pi_1000hz_400.csv  2pi_20pi_grad.csv  2pi_20pi_grad250.csv  2pi_20pi_n_1000hz.csv  2pi_240.csv  2pi_25.csv  2pi_30pi_1000hz_300.csv  2pi_320.csv  2pi_4.csv  2pi_400.csv  2pi_480.csv  2pi_5.csv  2pi_50.csv  2pi_560.csv  2pi_5pi_1000hz.csv  2pi_640.csv  2pi_720.csv  (+87 more)
(+629 files in other folders)
